Version 2.1.2
-------------
- fix crashes and missing exception handlings
- fix memory leaks in MLFile, library and title sanitizer
- prevent zombie creation and VLCMedia corruptions

Version 2.1.1
-------------
- improved title decrapification with faster processing and support for older
  TV show naming schemes
- improve notifications of some properties

Version 2.1
-----------
Features:
- added support for audio file detection and album organization
- improved title decrapification including advanced TV Show support
- overall stability improvements
- updated database format including a future-proof upgrade API

Added Public APIs:
- MLAlbum:
  - New class
- MLAlbumTrack:
  - New class
- MLFile:
  - new properties: lastAudioTrack, lastSubtitleTrack
- MLMediaLibrary:
  - new proporties: delegate, libraryNeedsUpgrade
  - new selector: upgradeLibrary
  - new delegate protocol: libraryUpgradeComplete

Version 2.0
-----------
The entire library was cleaned and relicensed to LGPL 2.1 or later.
Please note that the Objective-C syntax was updated, so MediaLibraryKit may no longer compile with outdated versions of Xcode / clang.

Features:
- added automatic support for HiDPI thumbnails depending on the iOS device the
  client app is executed on

Added APIs:
- MediaLibraryKit:
  - added a generic header to include the entire framework's functionality
    with a single #import
- MLMediaLibrary:
  - (void)updateMediaDatabase;

Removed APIs and code:
- MLMediaLibrary:
  - (void)updateDatabase;
- NameCleaner.rb

Modified behavior and misc:
- use of clang instead of llvm-gcc-4.2
- updated project file for Xcode 4.3 and later
- iOS Deployment target was raised to iOS 5.1
- different logging behavior: to see any debug messages, the framework needs
  to be compiled in debug mode.
- fixed a significant number of memory leaks
- updated TouchXML snapshot to current HEAD